{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 7,
  "lineage": "1a8f7f39-23c5-d28a-3b5d-ceebd6d87ed1",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "elite_devnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite_general_network/providers/Microsoft.Network/networkSecurityGroups/elite_devnsg",
            "location": "centralus",
            "name": "elite_devnsg",
            "resource_group_name": "elite_general_network",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.elite_general_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "elitedev_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite_general_network/providers/Microsoft.Network/routeTables/elitedev_rt",
            "location": "centralus",
            "name": "elitedev_rt",
            "resource_group_name": "elite_general_network",
            "route": [],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.elite_general_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "elitedev_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "10.0.0.4",
              "10.0.0.5"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1b23732e-323c-479c-affd-f4b1c3272820",
            "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite_general_network/providers/Microsoft.Network/virtualNetworks/elitedev_vnet",
            "location": "centralus",
            "name": "elitedev_vnet",
            "resource_group_name": "elite_general_network",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite_general_network/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/database-subnet",
                "name": "database-subnet",
                "security_group": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite_general_network/providers/Microsoft.Network/networkSecurityGroups/elite_devnsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite_general_network/providers/Microsoft.Network/virtualNetworks/elitedev_vnet/subnets/application-subnet",
                "name": "application-subnet",
                "security_group": "/subscriptions/54f68ee1-cff6-4579-aa38-945921f3f590/resourceGroups/elite_general_network/providers/Microsoft.Network/networkSecurityGroups/elite_devnsg"
              }
            ],
            "tags": {
              "ManagedWith": "terraform",
              "company": "elitesolutionsit",
              "environment": "Development"
            }
          },
          "dependencies": [
            "azurerm_network_security_group.elite_devnsg",
            "azurerm_resource_group.elite_general_network"
          ]
        }
      ]
    }
  ]
}